hdss syncing and search by name